-
Bug
-
Resolution: Done
-
P1: Critical
-
6.x
-
None
-
linux (fedora)
-
3f600283ecc9cfcfc65eabd305ad36fbce55dbce (qt/qttools/dev) f1158156a06bc03ba16c01c353f0f57a66d0fede (qt/qttools/6.0)
Designer (build from dev) crashes when creating a new form. Just run Designer and create e.g. a widget form. Call stack:
#0 0x00007ffff47d89d5 in raise () from /lib64/libc.so.6
#1 0x00007ffff47c18a4 in abort () from /lib64/libc.so.6
#2 0x00007ffff4d93361 in qt_message_fatal (context=..., message=...)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/global/qlogging.cpp:1892
#3 0x00007ffff4d8f624 in QMessageLogger::fatal (this=0x7fffffffa850,
msg=0x7ffff51bbe08 "ASSERT: \"%s\" in file %s, line %d")
at /home/jarek/dev/qt-dev/qtbase/src/corelib/global/qlogging.cpp:890
#4 0x00007ffff4d85314 in qt_assert (assertion=0x7ffff530e2d9 "parent",
file=0x7ffff530da88 "/home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qobject.cpp", line=2006)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/global/qglobal.cpp:3119
#5 0x00007ffff51a6072 in qt_qFindChild_helper (parent=0x0, name=..., mo=..., options=...)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qobject.cpp:2006
#6 0x00007ffff6fd2e53 in QObject::findChild<QLayout*> (this=0x0, aName=..., options=...)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qobject.h:164
#7 0x00007ffff6fd272d in qdesigner_internal::LayoutInfo::managedLayout (core=0x662a70, layout=0x0)
at /home/jarek/dev/qt-dev/qttools/src/designer/src/lib/shared/layoutinfo.cpp:224
#8 0x00007ffff76a50df in qdesigner_internal::FormWindowManager::layoutsToBeBroken (this=0x89d0b0, w=0xf88770)
at /home/jarek/dev/qt-dev/qttools/src/designer/src/components/formeditor/formwindowmanager.cpp:713
#9 0x00007ffff76a53e3 in qdesigner_internal::FormWindowManager::getUnsortedLayoutsToBeBroken (this=0x89d0b0,
firstOnly=true)
at /home/jarek/dev/qt-dev/qttools/src/designer/src/components/formeditor/formwindowmanager.cpp:756
#10 0x00007ffff76a5511 in qdesigner_internal::FormWindowManager::hasLayoutsToBeBroken (this=0x89d0b0)
at /home/jarek/dev/qt-dev/qttools/src/designer/src/components/formeditor/formwindowmanager.cpp:770
#11 0x00007ffff76a581f in qdesigner_internal::FormWindowManager::slotUpdateActions (this=0x89d0b0)
at /home/jarek/dev/qt-dev/qttools/src/designer/src/components/formeditor/formwindowmanager.cpp:830
#12 0x00007ffff76a0547 in qdesigner_internal::FormWindowManager::setActiveFormWindow (this=0x89d0b0, w=0xfed9f0)
at /home/jarek/dev/qt-dev/qttools/src/designer/src/components/formeditor/formwindowmanager.cpp:321
#13 0x00000000004adfd7 in QDesignerWorkbench::loadForm (this=0x652210, fileName=...,
detectLineTermiantorMode=false, errorMessage=0x7fffffffb260)
at /home/jarek/dev/qt-dev/qttools/src/designer/src/designer/qdesigner_workbench.cpp:960
#14 0x00000000004ae0a8 in QDesignerWorkbench::openTemplate (this=0x652210, templateFileName=...,
editorFileName=..., errorMessage=0x7fffffffb260)
at /home/jarek/dev/qt-dev/qttools/src/designer/src/designer/qdesigner_workbench.cpp:979
#15 0x00000000004882db in NewForm::openTemplate (this=0xe06f00, ptrToErrorMessage=0x7fffffffb260)
at /home/jarek/dev/qt-dev/qttools/src/designer/src/designer/newform.cpp:203
#16 0x0000000000487e7f in NewForm::slotButtonBoxClicked (this=0xe06f00, btn=0xf739a0)
at /home/jarek/dev/qt-dev/qttools/src/designer/src/designer/newform.cpp:165
#17 0x0000000000489330 in QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<QAbstractButton*>, void, void (NewForm::*)(QAbstractButton*)>::call (f=
(void (NewForm::*)(NewForm * const, QAbstractButton *)) 0x487d86 <NewForm::slotButtonBoxClicked(QAbstractButton*)>, o=0xe06f00, arg=0x7fffffffb540) at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qobjectdefs_impl.h:152
#18 0x0000000000489146 in QtPrivate::FunctionPointer<void (NewForm::*)(QAbstractButton*)>::call<QtPrivate::List<QAbstractButton*>, void> (f=
(void (NewForm::*)(NewForm * const, QAbstractButton *)) 0x487d86 <NewForm::slotButtonBoxClicked(QAbstractButton*)>, o=0xe06f00, arg=0x7fffffffb540) at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qobjectdefs_impl.h:185
#19 0x0000000000488dc7 in QtPrivate::QSlotObject<void (NewForm::*)(QAbstractButton*), QtPrivate::List<QAbstractButton*>, void>::impl (which=1, this_=0xf6b5a0, r=0xe06f00, a=0x7fffffffb540, ret=0x0)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qobjectdefs_impl.h:395
#20 0x00007ffff4e794ff in QtPrivate::QSlotObjectBase::call (this=0xf6b5a0, r=0xe06f00, a=0x7fffffffb540)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qobjectdefs_impl.h:375
#21 0x00007ffff51b2142 in doActivate<false> (sender=0xf68ea0, signal_index=7, argv=0x7fffffffb540)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qobject.cpp:3825
#22 0x00007ffff51abf21 in QMetaObject::activate (sender=0xf68ea0,
m=0x7ffff6c02d80 <QDialogButtonBox::staticMetaObject>, local_signal_index=0, argv=0x7fffffffb540)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qobject.cpp:3885
#23 0x00007ffff660dcbd in QDialogButtonBox::clicked (this=0xf68ea0, _t1=0xf739a0)
at qtbase/src/widgets/Widgets_autogen/include/moc_qdialogbuttonbox.cpp:279
#24 0x00007ffff660d15e in QDialogButtonBoxPrivate::_q_handleButtonClicked (this=0xe3d0e0)
at /home/jarek/dev/qt-dev/qtbase/src/widgets/widgets/qdialogbuttonbox.cpp:870
#25 0x00007ffff660d771 in QDialogButtonBox::qt_static_metacall (_o=0xf68ea0, _c=QMetaObject::InvokeMetaMethod,
_id=4, _a=0x7fffffffb7f0) at qtbase/src/widgets/Widgets_autogen/include/moc_qdialogbuttonbox.cpp:157
#26 0x00007ffff51b21db in doActivate<false> (sender=0xf739a0, signal_index=9, argv=0x7fffffffb7f0)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qobject.cpp:3837
#27 0x00007ffff51abf21 in QMetaObject::activate (sender=0xf739a0,
m=0x7ffff6bf9920 <QAbstractButton::staticMetaObject>, local_signal_index=2, argv=0x7fffffffb7f0)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qobject.cpp:3885
#28 0x00007ffff650c714 in QAbstractButton::clicked (this=0xf739a0, _t1=false)
at qtbase/src/widgets/Widgets_autogen/include/moc_qabstractbutton.cpp:290
#29 0x00007ffff6509fac in QAbstractButtonPrivate::emitClicked (this=0xf71700)
at /home/jarek/dev/qt-dev/qtbase/src/widgets/widgets/qabstractbutton.cpp:414
#30 0x00007ffff6509f3e in QAbstractButtonPrivate::click (this=0xf71700)
at /home/jarek/dev/qt-dev/qtbase/src/widgets/widgets/qabstractbutton.cpp:407
#31 0x00007ffff650bb26 in QAbstractButton::timerEvent (this=0xf739a0, e=0x7fffffffc4c0)
at /home/jarek/dev/qt-dev/qtbase/src/widgets/widgets/qabstractbutton.cpp:1153
#32 0x00007ffff51a4b65 in QObject::event (this=0xf739a0, e=0x7fffffffc4c0)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qobject.cpp:1283
#33 0x00007ffff63d1225 in QWidget::event (this=0xf739a0, event=0x7fffffffc4c0)
at /home/jarek/dev/qt-dev/qtbase/src/widgets/kernel/qwidget.cpp:9061
#34 0x00007ffff650b26f in QAbstractButton::event (this=0xf739a0, e=0x7fffffffc4c0)
at /home/jarek/dev/qt-dev/qtbase/src/widgets/widgets/qabstractbutton.cpp:968
#35 0x00007ffff6607caa in QPushButton::event (this=0xf739a0, e=0x7fffffffc4c0)
at /home/jarek/dev/qt-dev/qtbase/src/widgets/widgets/qpushbutton.cpp:720
#36 0x00007ffff63557ba in QApplicationPrivate::notify_helper (this=0x53f350, receiver=0xf739a0, e=0x7fffffffc4c0)
at /home/jarek/dev/qt-dev/qtbase/src/widgets/kernel/qapplication.cpp:3396
#37 0x00007ffff63555c2 in QApplication::notify (this=0x7fffffffd620, receiver=0xf739a0, e=0x7fffffffc4c0)
at /home/jarek/dev/qt-dev/qtbase/src/widgets/kernel/qapplication.cpp:3346
#38 0x00007ffff4e5d4c4 in QCoreApplication::notifyInternal2 (receiver=0xf739a0, event=0x7fffffffc4c0)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qcoreapplication.cpp:1040
#39 0x00007ffff4e5de70 in QCoreApplication::sendEvent (receiver=0xf739a0, event=0x7fffffffc4c0)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qcoreapplication.cpp:1442
#40 0x00007ffff506b159 in QTimerInfoList::activateTimers (this=0x60c880)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qtimerinfo_unix.cpp:639
#41 0x00007ffff5172887 in timerSourceDispatch (source=0x60c820)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:183
#42 0x00007ffff43bc96f in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#43 0x00007ffff440e758 in g_main_context_iterate.constprop () from /lib64/libglib-2.0.so.0
#44 0x00007ffff43b9d43 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#45 0x00007ffff51732f8 in QEventDispatcherGlib::processEvents (this=0x607620, flags=...)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:427
#46 0x00007fffe3fb7f06 in QXcbGlibEventDispatcher::processEvents (this=0x607620, flags=...)
at /home/jarek/dev/qt-dev/qtbase/src/plugins/platforms/xcb/qxcbeventdispatcher.cpp:132
#47 0x00007ffff4e6e623 in QEventLoop::processEvents (this=0x7fffffffc7b0, flags=...)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qeventloop.cpp:139
#48 0x00007ffff4e6e954 in QEventLoop::exec (this=0x7fffffffc7b0, flags=...)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qeventloop.cpp:232
#49 0x00007ffff66a9faa in QDialog::exec (this=0xe06f00)
at /home/jarek/dev/qt-dev/qtbase/src/widgets/dialogs/qdialog.cpp:599
#50 0x0000000000492c54 in QDesignerActions::showNewFormDialog (this=0x544580, fileName=...)
at /home/jarek/dev/qt-dev/qttools/src/designer/src/designer/qdesigner_actions.cpp:584
#51 0x0000000000492b49 in QDesignerActions::createForm (this=0x544580)
at /home/jarek/dev/qt-dev/qttools/src/designer/src/designer/qdesigner_actions.cpp:572
#52 0x000000000048cb2d in QDesigner::callCreateForm (this=0x7fffffffd620)
at /home/jarek/dev/qt-dev/qttools/src/designer/src/designer/qdesigner.cpp:324
#53 0x000000000048d88c in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (QDesigner::*)()>::call(void (QDesigner::*)(), QDesigner*, void**) (
f=(void (QDesigner::*)(QDesigner * const)) 0x48cafa <QDesigner::callCreateForm()>, o=0x7fffffffd620,
arg=0x7fffffffca08) at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qobjectdefs_impl.h:152
#54 0x000000000048d710 in QtPrivate::FunctionPointer<void (QDesigner::*)()>::call<QtPrivate::List<>, void>(void (QDesigner::*)(), QDesigner*, void**) (
f=(void (QDesigner::*)(QDesigner * const)) 0x48cafa <QDesigner::callCreateForm()>, o=0x7fffffffd620,
arg=0x7fffffffca08) at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qobjectdefs_impl.h:185
#55 0x000000000048d5af in QtPrivate::QSlotObject<void (QDesigner::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=1, this_=0x8f9a60, r=0x7fffffffd620, a=0x7fffffffca08, ret=0x0)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qobjectdefs_impl.h:395
#56 0x00007ffff4e794ff in QtPrivate::QSlotObjectBase::call (this=0x8f9a60, r=0x7fffffffd620, a=0x7fffffffca08)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qobjectdefs_impl.h:375
#57 0x00007ffff4edf0e1 in QSingleShotTimer::timerEvent (this=0x8fb160)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qtimer.cpp:341
#58 0x00007ffff51a4b65 in QObject::event (this=0x8fb160, e=0x7fffffffd290)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qobject.cpp:1283
#59 0x00007ffff63557ba in QApplicationPrivate::notify_helper (this=0x53f350, receiver=0x8fb160, e=0x7fffffffd290)
at /home/jarek/dev/qt-dev/qtbase/src/widgets/kernel/qapplication.cpp:3396
#60 0x00007ffff6352e53 in QApplication::notify (this=0x7fffffffd620, receiver=0x8fb160, e=0x7fffffffd290)
at /home/jarek/dev/qt-dev/qtbase/src/widgets/kernel/qapplication.cpp:2758
#61 0x00007ffff4e5d4c4 in QCoreApplication::notifyInternal2 (receiver=0x8fb160, event=0x7fffffffd290)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qcoreapplication.cpp:1040
#62 0x00007ffff4e5de70 in QCoreApplication::sendEvent (receiver=0x8fb160, event=0x7fffffffd290)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qcoreapplication.cpp:1442
#63 0x00007ffff506b159 in QTimerInfoList::activateTimers (this=0x60c880)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qtimerinfo_unix.cpp:639
#64 0x00007ffff5172887 in timerSourceDispatch (source=0x60c820)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:183
#65 0x00007ffff43bc96f in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#66 0x00007ffff440e758 in g_main_context_iterate.constprop () from /lib64/libglib-2.0.so.0
#67 0x00007ffff43b9d43 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#68 0x00007ffff51732f8 in QEventDispatcherGlib::processEvents (this=0x607620, flags=...)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:427
#69 0x00007fffe3fb7f06 in QXcbGlibEventDispatcher::processEvents (this=0x607620, flags=...)
at /home/jarek/dev/qt-dev/qtbase/src/plugins/platforms/xcb/qxcbeventdispatcher.cpp:132
#70 0x00007ffff4e6e623 in QEventLoop::processEvents (this=0x7fffffffd570, flags=...)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qeventloop.cpp:139
#71 0x00007ffff4e6e954 in QEventLoop::exec (this=0x7fffffffd570, flags=...)
at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qeventloop.cpp:232
#72 0x00007ffff4e5dcb2 in QCoreApplication::exec ()
at /home/jarek/dev/qt-dev/qtbase/src/corelib/kernel/qcoreapplication.cpp:1355
#73 0x00007ffff573fab2 in QGuiApplication::exec ()
at /home/jarek/dev/qt-dev/qtbase/src/gui/kernel/qguiapplication.cpp:1874
#74 0x00007ffff635283f in QApplication::exec ()
at /home/jarek/dev/qt-dev/qtbase/src/widgets/kernel/qapplication.cpp:2610
#75 0x00000000004800c9 in main (argc=1, argv=0x7fffffffd7a8)
at /home/jarek/dev/qt-dev/qttools/src/designer/src/designer/main.cpp:55