Designer: Fix a crash when creating a new form

Pick-to: 6.0
Fixes: QTBUG-89918
Change-Id: Id26c68ccbb0ce8410c5ccd719ec82a8f4d183105
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>